# token-tracker

./: .gitignore  LICENSE  Makefile  README.md  prices.json  pyproject.toml
scripts/: com.user.token-tracker.plist  install-launchagent.sh  run-ingest.sh  run-server.sh  uninstall-launchagent.sh
tracker/: api.py  db.py  ingest.py  parse_claude.py  parse_codex.py  pricing.py  recompute_costs.py
web/: app.js  index.html  styles.css
